samples/_failures_safe/1761073887_5b48a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9406131.c: In function ‘handle_done’:
./samples/SAFE/__tmp_e9406131.c:167:20: error: missing terminating " character
  167 |             printf("
      |                    ^
./samples/SAFE/__tmp_e9406131.c:167:13: error: expected expression at end of input
  167 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_e9406131.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9406131.c:167:13: error: expected declaration or statement at end of input
